<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.setting.SettingFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:elevation="-1dp"
        android:scaleType="fitXY"
        android:src="@drawable/img_bg_lang" />

    <FrameLayout
        android:id="@+id/layoutActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/actionBar"
            layout="@layout/layout_actionbar" />
    </FrameLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dimension_20"

        android:elevation="@dimen/dimension_1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/layoutActionBar">

        <!--            btnLang-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnLang"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimension_0"
            android:layout_marginHorizontal="@dimen/dimension_16"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="10"
            app:layout_constraintDimensionRatio="3.28:0.5"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/imgLangFor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/frame_setting" />


            <TextView
                android:id="@+id/txt1"
                style="@style/single_marquee"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/language"
                android:fontFamily="@font/londrina_solid_regular"
                android:textColor="@color/app_color"
                android:textSize="@dimen/text_size_16"
                app:outerStrokeColor="@color/app_color"
                app:outerStrokeWidth="@dimen/dimension_1_3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnRate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimension_0"
            android:layout_marginTop="@dimen/dimension_16"
            android:layout_marginHorizontal="@dimen/dimension_16"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="10"
            app:layout_constraintDimensionRatio="3.28:0.5"
            app:layout_constraintTop_toBottomOf="@+id/btnLang">


            <ImageView
                android:id="@+id/imgLangFor1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/frame_setting" />


            <TextView
                android:id="@+id/txt2"
                style="@style/single_marquee"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/rate_us"
                android:fontFamily="@font/londrina_solid_regular"
                android:textColor="@color/app_color"
                android:textSize="@dimen/text_size_16"
                app:outerStrokeColor="@color/app_color"
                app:outerStrokeWidth="@dimen/dimension_1_3" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnShare"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimension_0"
            android:layout_marginTop="@dimen/dimension_16"
            android:layout_marginHorizontal="@dimen/dimension_16"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="10"
            app:layout_constraintDimensionRatio="3.28:0.5"
            app:layout_constraintTop_toBottomOf="@+id/btnRate">


            <ImageView
                android:id="@+id/imgLangFor2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/frame_setting" />



            <TextView
                android:id="@+id/txt3"

                style="@style/single_marquee"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/share_app"
                android:fontFamily="@font/londrina_solid_regular"
                android:textColor="@color/app_color"
                android:textSize="@dimen/text_size_16"
                app:outerStrokeColor="@color/app_color"
                app:outerStrokeWidth="@dimen/dimension_1_3" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnPolicy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimension_0"
            android:layout_marginTop="@dimen/dimension_16"
            android:layout_marginHorizontal="@dimen/dimension_16"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="10"
            app:layout_constraintDimensionRatio="3.28:0.5"
            app:layout_constraintTop_toBottomOf="@+id/btnShare">

            <ImageView
                android:id="@+id/imgLangFor3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/frame_setting" />


            <TextView
                android:id="@+id/txt4"
                style="@style/single_marquee"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="@font/londrina_solid_regular"
                android:text="@string/privacy_policy"
                android:textColor="@color/app_color"
                android:textSize="@dimen/text_size_16"
             />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
