<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scvText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone">
    <ScrollView
        android:elevation="@dimen/dimension_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimension_0"
        android:layout_marginTop="-15dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/single_marquee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimension_16"
                android:fontFamily="@font/carter_one_regular"
                android:gravity="center"
                android:text="@string/text"
                android:textColor="@color/app_color"
                android:textSize="@dimen/text_size_16"
                app:outerStrokeColor="@color/stroker_gray"
                app:outerStrokeWidth="@dimen/dimension_0_4" />

            <EditText
                android:id="@+id/edtText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimension_44"
                android:layout_marginHorizontal="@dimen/dimension_16"
                android:background="@drawable/bg_8_solid_white"
                android:ellipsize="end"
                android:fontFamily="@font/itim_regular"
                android:hint="@string/type_your_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLength="30"
                android:paddingHorizontal="@dimen/dimension_16"
                android:singleLine="true"
                android:textColorHint="#99868686"
                android:textSize="@dimen/text_size_14" />

            <TextView
                style="@style/single_marquee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimension_16"
                android:layout_marginTop="@dimen/dimension_10"
                android:fontFamily="@font/carter_one_regular"
                android:text="Font"
                android:textColor="@color/app_color"
                android:textSize="@dimen/text_size_16"
                app:outerStrokeColor="@color/stroker_gray" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvFont"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimension_40"
                android:layout_marginStart="@dimen/dimension_16"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_font" />

            <TextView
                style="@style/single_marquee"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimension_16"
                android:layout_marginTop="@dimen/dimension_10"
                android:fontFamily="@font/carter_one_regular"
                android:text="@string/color"
                android:textColor="@color/app_color"
                android:textSize="@dimen/text_size_16"
                app:outerStrokeColor="@color/stroker_gray" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvTextColor"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimension_40"
                android:layout_marginStart="@dimen/dimension_16"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_text_color" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimension_30" />

        </LinearLayout>
    </ScrollView>
    <View
        android:id="@+id/constraint2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintDimensionRatio="3.16:0.24"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimension_0"
        android:layout_marginTop="@dimen/dimension_8"/>

    <ImageView
        android:id="@+id/btnDoneText"
        android:layout_width="@dimen/dimension_0"
        android:elevation="@dimen/dimension_2"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_height="@dimen/dimension_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraint2"
        app:layout_constraintBottom_toBottomOf="@+id/constraint2"
        android:layout_marginEnd="@dimen/dimension_16"
        android:src="@drawable/ic_done_1" />
</androidx.constraintlayout.widget.ConstraintLayout>
