<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/dimension_35"
            android:foreground="@color/transparent"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/dimension_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/app_color"
            app:strokeWidth="@dimen/dimension_0">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/contrainRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foreground="@color/transparent"
                android:paddingHorizontal="@dimen/dimension_40"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imvAvtRate"
                    android:layout_width="@dimen/dimension_72"
                    android:layout_height="@dimen/dimension_72"
                    android:layout_marginTop="@dimen/dimension_28"
                    android:src="@drawable/ic_rate_rero"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimension_16"
                    android:fontFamily="@font/roboto_medium"
                    android:freezesText="true"
                    android:gravity="center"

                    android:text="@string/zero_star_title"
                    android:textColor="@color/black1"
                    android:textSize="@dimen/text_size_18"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imvAvtRate"
                    app:outerStrokeColor="@color/app_color"
                    app:outerStrokeWidth="@dimen/dimension_1" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:freezesText="true"
                    android:gravity="center"
                    android:text="@string/zero_star"
                    android:textColor="@color/black5"
                    android:textSize="@dimen/text_size_14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv1" />

                <com.willy.ratingbar.ScaleRatingBar
                    android:id="@+id/ll1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimension_8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv2"
                    app:srb_clearRatingEnabled="false"
                    app:srb_clickable="true"
                    app:srb_drawableEmpty="@drawable/ic_rate_not"
                    app:srb_drawableFilled="@drawable/ic_rate"
                    app:srb_isIndicator="false"
                    app:srb_minimumStars="0"
                    app:srb_numStars="0"
                    app:srb_rating="0"
                    app:srb_scrollable="true"
                    app:srb_starHeight="@dimen/dimension_30"
                    app:srb_starPadding="@dimen/dimension_4"
                    app:srb_starWidth="@dimen/dimension_30"
                    app:srb_stepSize="1" />

                <LinearLayout
                    android:layout_width="@dimen/dimension_0"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimension_20"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll1">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimension_40"
                        android:layout_marginTop="@dimen/dimension_20"
                        android:background="@drawable/bg_rated"
                        app:cardElevation="@dimen/dimension_0">

                        <TextView
                            android:id="@+id/btnVote"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="center"
                            android:paddingVertical="@dimen/dimension_10"
                            android:text="@string/rate"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_16" />
                    </FrameLayout>
                    <!--                <androidx.appcompat.widget.AppCompatButton-->
                    <!--                    android:id="@+id/btnVote"-->
                    <!--                    android:layout_width="match_parent"-->
                    <!--                    android:layout_height="@dimen/dimension_40"-->
                    <!--                    android:layout_marginTop="@dimen/dimension_20"-->
                    <!--                    android:background="@drawable/frame_bg_rate"-->
                    <!--                    android:fontFamily="@font/roboto_medium"-->
                    <!--                    android:gravity="center"-->
                    <!--                    android:text="@string/rate"-->
                    <!--                    android:textAllCaps="false"-->
                    <!--                    android:textColor="@color/white"-->
                    <!--                    android:textSize="@dimen/text_size_14" />-->

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btnExit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimension_20"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:paddingHorizontal="@dimen/dimension_30"
                        android:paddingVertical="@dimen/dimension_10"
                        android:text="@string/exit"
                        android:textAllCaps="false"
                        android:textColor="@color/black3"
                        android:textSize="@dimen/text_size_16" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
